Foobar theme metadate contrast issue resolved

--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -194,7 +194,7 @@ div p{margin:.5em .2em}
 #moin-global-panel ul,#moin-local-panel ul{list-style-type:none;margin:0;}
 #moin-global-panel ul li,#moin-local-panel ul li{background-color:#2c2c2a;font-size:1em;color:#fff;font-weight:bold;padding:.5em;border:1px solid #ccc;border-radius:4px;box-shadow:1px 1px 2px #9d9d9b;margin-left:.5em;margin-bottom:.5em;overflow:hidden;word-wrap:break-word;}
 #moin-global-panel ul li ul,#moin-local-panel ul li ul{padding:.2em .1em;}
-#moin-global-panel ul li ul li,#moin-local-panel ul li ul li{font-size:.8em;color:#fff;font-weight:normal;padding:.1em .1em .1em .1em;border:none;box-shadow:none;margin:0}
+#moin-global-panel ul li ul li,#moin-local-panel ul li ul li{font-size:.8em;color:#bababa;font-weight:normal;padding:.1em .1em .1em .1em;border:none;box-shadow:none;margin:0}
 #moin-footer ul,#moin-credits{float:left;list-style-type:none;}
 #moin-footer ul li,#moin-credits li{padding:.1em}
 #moin-footer ul a,#moin-credits a{color:#616161}
@@ -307,8 +307,8 @@ a:link{color:#4fa8fa}
 a:visited{color:#5693c1}
 a:hover{color:#007cef;text-decoration:underline}
 a:active{color:#51d443;text-decoration:underline}
-a.moin-nonexistent:link{color:#f1f1f1}
-a.moin-nonexistent:visited{color:#f1f1f1}
+a.moin-nonexistent:link{color:#bababa}
+a.moin-nonexistent:visited{color:#bababa}
 a.moin-nonexistent:hover{color:#ff2727}
 a.moin-nonexistent:active{color:#ff2727}
 .moin-flash{margin:0;padding:6px 6px 6px 38px;background-color:#fff;border-bottom:border style;background-repeat:no-repeat;background-position:16px center}
